# tpRigToolkit-libs-naming

./: .travis.yml  MANIFEST.in  README.md  README.rst  requirements.txt  setup.cfg  setup.py
tests/: test_general.py
tpRigToolkit/libs/naming/: __logging__.ini  __version__.py  loader.py  register.py
tpRigToolkit/libs/naming/core/: naminglib.py
