[metadata]
name = tpRigToolkit-libs-naming
description = Library to manage nomenclature of project files, folders and DCC nodes
long_description = file: README.rst
long_description_content_type = text/x-rst
version = attr: tpRigToolkit.libs.naming.__version__.__version__
license = MIT
license_file = LICENSE
author = Tomas Poveda
author_email = tpovedatd@gmail.com
url = https://github.com/tpRigToolkit/tpRigToolkit-libs-naming


[options]
zip_safe = false
include_package_data = true
packages=find:
install_requires=
    Qt.py
    pytest
    pytest-cov
    coveralls
    sphinx
    sphinx_rtd_theme
    lucidity

[options.extras_require]
dev =
    wheel

test =
    pytest

[bdist_wheel]
universal=1